force-app/main/default/objects/CEMS_User_Login__c/CEMS_User_Login__c.object-meta.xml
<CustomObject>
    <description>This is used to maintain records of all personnel logging into our public site.</description>
    <label>User Login</label>
    <nameField>
        <displayFormat>UL-{0000}</displayFormat>
        <label>User Login Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Login</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>