force-app/main/default/objects/CEMS_User_Login__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <description>Stores applicant first name</description>
    <label>Applicant Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>