force-app/main/default/objects/CEMS_User_Login__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>This is used to store the email of the personnel.</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>