force-app/main/default/objects/CEMS_User_Login__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <description>Stores the employee Id of the personnel</description>
    <label>Employee Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>