force-app/main/default/objects/CEMS_User_Login__c/fields/Is_Used__c.field-meta.xml
<CustomField>
    <fullName>Is_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores information whether otp has been used or not</description>
    <label>Is Used</label>
    <type>Checkbox</type>
</CustomField>