force-app/main/default/objects/CEMS_User_Login__c/fields/OTP__c.field-meta.xml
<CustomField>
    <fullName>OTP__c</fullName>
    <description>Stores the otp which has been generated by the system</description>
    <label>OTP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>