force-app/main/default/objects/CEMS_User_Login__c/fields/Personnel__c.field-meta.xml
<CustomField>
    <fullName>Personnel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is used to store which type of personnel is logging in, employee or applicant</description>
    <label>Personnel</label>
    <referenceTo>CEMS_Personnel__c</referenceTo>
    <relationshipLabel>User Login</relationshipLabel>
    <relationshipName>User_Login</relationshipName>
    <type>Lookup</type>
</CustomField>