force-app/main/default/objects/CEMS_User_Login__c/recordTypes/Applicant_Login.recordType-meta.xml
<RecordType>
    <fullName>Applicant_Login</fullName>
    <active>true</active>
    <description>This is used to store applicant login details.</description>
    <label>Applicant Login</label>
</RecordType>