force-app/main/default/objects/CEMS_User_Login__c/recordTypes/Employee_Login.recordType-meta.xml
<RecordType>
    <fullName>Employee_Login</fullName>
    <active>true</active>
    <description>This is used to store employee login details.</description>
    <label>Employee Login</label>
</RecordType>