force-app/main/default/objects/CEMS_User_Login__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Id__c</columns>
    <columns>Email_Address__c</columns>
    <columns>OTP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>